# shape-code-bench

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE-ARTIFACTS.md  README.md  continue_for_claude.md  pyproject.toml  resume.md
.agents/commands/: freshness-check.md  offline-verify.md
.agents/skills/benchmark-maintenance/: SKILL.md
.codex/environments/: README.md
data/eval_v1/: SHA256SUMS  manifest.json
data/runs/20260509T175615Z-codex-gpt-5-5/: run_config.json  (+1 more)
docs/: REPRODUCIBILITY.md  benchmark-spec.md  research-landscape.md
paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/sections/: abstract.tex  analysis.tex  appendix_reproducibility.tex  benchmark.tex  experiments.tex  intro.tex  limitations.tex  related.tex
paper/tables/: error_taxonomy.csv  error_taxonomy.tex  main_results.csv  main_results.tex
scripts/: analyze.py  freeze_eval_v1.py  make_figures.py  publish_hf_eval_v1.py  run_codex_sweep.sh  run_paper_sweep.sh  validate_determinism.py
src/shape_code_bench/: __init__.py  __main__.py  cli.py  dsl.py  evaluator.py  generator.py  normalization.py  prompts.py  renderer.py  runner.py  types.py
src/ui_bench/: __init__.py  __main__.py  cli.py  dsl.py  evaluator.py  generator.py  normalization.py  prompts.py  renderer.py  runner.py
tests/: test_adapters.py  test_baselines.py  test_claude_code_adapter.py  test_cli.py  test_codex_adapter.py  test_dsl.py  test_evaluator.py  test_generator.py  test_live_codex_smoke.py  test_live_openai_smoke.py  test_normalization.py  test_renderer.py  test_runner.py
(+1652 files in other folders)
