[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ui-bench"
version = "0.1.0"
description = "Synthetic benchmark for reconstructing drawing programs from images."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.8,<4.0",
  "numpy>=2.2,<3.0",
  "openai>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "Pillow>=11.2,<12.0",
  "python-dotenv>=1.1,<2.0",
  "scipy>=1.11,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
ui-bench = "ui_bench.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
